--- a/AnimalCrossing/Views/CatDate/Index.cshtml
+++ b/AnimalCrossing/Views/CatDate/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Matches</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
 
 
@@ -16,7 +16,7 @@
     <div class="container">
     <div class="row">
         @foreach (var item in Model) {
-            <div class="card col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+            <div class="card col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card-body">
 
                     <h3 class="card-text">@item.HostCat.Name</h3>
@@ -24,7 +24,7 @@
 
                     <h3 class="card-text">@item.GuestCat.Name</h3>
                     <img src=@item.GuestCat.ProfilePicture class = "card-img-top" alts ="..." />
-                    <p class="card-text">@item.Location</p>
+                    <p class="card-text">City: @item.Location</p>
                     <p class="card-text">@item.DateTime</p>
                     <a class="btn btn-primary" asp-controller="CatDate"  asp-action="Edit" asp-route-id="@item.CatDateId">Edit</a> 
                     <a class="btn btn-primary" asp-controller="CatDate"  asp-action="Details" asp-route-id="@item.CatDateId">Details</a> 
