--- a/AnimalCrossing/Views/Animal/showCats.cshtml
+++ b/AnimalCrossing/Views/Animal/showCats.cshtml
@@ -1,6 +1,5 @@
 ﻿@model List<Cat>;
 
-
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -10,10 +9,11 @@
 <form asp-controller="Animal" asp-action="Search" method="get">
     <p>
         <input type="text" name="SearchString" value="@ViewBag.keepSearch">
-        <input type="submit" value="Filter"  />
-        
+        <input type="submit" value="Filter" />
+
     </p>
 </form>
 
 @await Html.PartialAsync("_showCatPartialView", Model)
 
+<a class="btn btn-primary" asp-controller="Animal" asp-action="CreateDummyCat">Create Dummy Cat</a>
