--- a/AnimalCrossing/Views/Shared/_ShowCatPartialView.cshtml
+++ b/AnimalCrossing/Views/Shared/_ShowCatPartialView.cshtml
@@ -26,8 +26,8 @@
                     <p class="card-text">@item.Description</p>
                     <p class="card-text">@item.BirthDate</p>
                     <p class="card-text">@item.Species.Name</p>
-                    <a class="btn btn-xs btn-primary" asp-controller="Animal" asp-action="EditCat" asp-route-id="@item.CatId">Edit cat</a>
-                    <a class="btn btn-xs btn-primary" asp-controller="Animal" asp-action="DeleteCat" asp-route-id="@item.CatId">Delete cat</a>
+                    <a class="btn btn-sm btn-primary" asp-controller="Animal" asp-action="EditCat" asp-route-id="@item.CatId">Edit cat</a>
+                    <a class="btn btn-sm btn-primary" asp-controller="Animal" asp-action="DeleteCat" asp-route-id="@item.CatId">Delete cat</a>
                 </div>
                 </div>
             }
